styles/unibo/u_barra_login.scss
.u-barra-login {
  background-color: $barra-login-background;
  color: color-pick-contrast($barra-login-background, (#fff, $base-font-color));
  line-height: 32px;
  padding: 0px;

  a {
    color: color-pick-contrast($barra-login-background, (#fff, $base-font-color));
    text-decoration: none;
    display: inline-block;
  }
  img {
    height: 18px;
    vertical-align: text-top;
    width: 18px;
  }
  .menu {
    > li {
      white-space: nowrap;
      > a {
        @include breakpoint(small only){
          padding: 1rem;
        }
      }
    }
  }
  .no-arrow {
    padding-right: 0 !important;
    
    @include breakpoint(medium){
      &:after { // Nascondo la freccia
        display: none !important;
      }
    }
  }
  .is-dropdown-submenu {
    border-top: 0;
  }
  .dropdown.menu { // Foundation menu
    opacity: 0;
    transition: opacity 0.5s;
    overflow: hidden;
    border-left: 1px solid $gray;
    
    @include breakpoint(medium){
      float: right;
    }
    
    &.vertical {
      > li.opens-right > a::after {
        border-color: transparent transparent transparent #fff;
        @include breakpoint(medium){
          border-color: $white transparent transparent;
        }
      }
    }
    
    &[role="menubar"] {
      opacity: 1;
      overflow: visible;
    }
    
    > li {
      transition: opacity 2s linear;
      
      @include breakpoint(medium){
        border-right: 1px solid $gray;
      }

      .is-dropdown-submenu.vertical {
        min-width: 100%;
      }
      &:hover{
        background-color: $white;
        
        a {
          color: $light-black;
        }
      }
      &.is-dropdown-submenu-parent {
        padding-right: 0.7rem;
        transition: background-color 0.2s;
        box-sizing: content-box;
        
        &:hover {
          background-color: #fff;
          
          > a {
            color: $light-black;
            
            &:after { // Dropdown Arrow
              border-color: $light-black transparent transparent;
            }
          }
        }
        
        > a {
          &:hover {
            color: $light-black;
            background-color: transparent;
          }
        }
        
        .menu {
          li {
            a {
              color: $light-black;
              transition: background-color 0.2s;
              
              &:hover {
                background-color: darken($white, 12%);
                color: darken($light-black, 25%);
              }
            }
          }
        }
      }
    }
  }
}

.content-wrapper {
  .u-barra-login {
	flex-grow: 0;
  }
}

.u-utente-reale {
  font-style: italic;
  color: $dark-gray;
  font-size: 0.9em;
  text-align: center;
  border-bottom: 1px solid $medium-gray;
  padding: $menu-item-padding;
  
  &:before {
    content: "(";
  }
  &:after {
    content: ")";
  }
}

